--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "next": "15.0.1",
+    "next-intl": "^3.9.5",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "typescript": "^5.6.3",
+    "jiti": "^1.21.6"
+  },
+  "packageManager": "pnpm@9.1.1",
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "resolutions": {
+    "typescript": "^5.6.3"
   }
 }
