--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "deploy": "next build && touch out/.nojekyll && git add out/ && git commit --no-verify -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.7",
+    "@types": "link:papaparse/@types",
+    "date-fns": "^4.1.0",
     "next": "15.0.1",
     "next-intl": "^3.9.5",
+    "papaparse": "^5.4.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.1",
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "typescript": "^5.6.3",
-    "jiti": "^1.21.6"
+    "jiti": "^1.21.6",
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.1.1",
   "engines": {
