--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "^10.4.20",
     "jiti": "^1.21.6",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.1.1",
