--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.62.7",
+    "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-virtual": "^3.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
