--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Next.js to GitHub Pages
 on:
   push:
     branches:
-      - main # Deploy only when changes are pushed to the main branch
+      - main
 permissions:
   contents: write
 jobs:
@@ -16,21 +16,23 @@ jobs:
       - name: Setup Node.js and pnpm
         uses: pnpm/action-setup@v3
         with:
-          node-version: 22 # Use the Node.js version required by your project
-          install-pnpm: true # Installs pnpm
+          node-version: 22
+          install-pnpm: true
       # Step 3: Install dependencies
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      # Step 4: Build and export the static site
-      - name: Build and export
+      # Step 4: Build the static site and create .nojekyll file
+      - name: Build the static site
         run: |
           pnpm build
-          mv out public
+          # Create .nojekyll to prevent GitHub Pages from ignoring certain files
+          touch out/.nojekyll
+          # Ensure all built files (including assets) are added for deployment
+          git add out/
+          git commit --no-verify -m "Deploy static site to GitHub Pages"
       # Step 5: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: public
-          publish_branch: gh-pages
-          enable_jekyll: true
+          publish_dir: out # Using 'out' directly for GitHub Pages deployment
